--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -23,9 +23,9 @@
 
           <!-- Card 3 -->
           <div class="card">
-              <h2>Feedbacks</h2>
-              <p class="phome">Envie suas sugestões, reclamações ou elogios e ajude a melhorar os serviços.</p>
-              <a href="/feedbacks" class="btn-card">Enviar</a>
+              <h2>Transparência</h2>
+              <p class="phome">Dashboard com gráficos interativos e dinâmicos com as solicitações da cidade.</p>
+              <a href="/transparencia" class="btn-card">Ver</a>
           </div>
       </div>
   </div>
